--- a/www/style.css
+++ b/www/style.css
@@ -1,7 +1,8 @@
 body {
 	font-family: sans-serif;
 	padding: 2.5em;
-	background-color: #f6f6f6;
+	background-color: #edf9ff;
+	color: #c90e40;
 }
 
 a {
